--- a/templates/join.html
+++ b/templates/join.html
@@ -361,42 +361,42 @@
     {
       key: "magid",
       token: "magid",
-      img: "/static/photos/magid.jpg",
+      img: "/static/avatars/magid.jpg",
       title: "🐐 Quel plaisir…",
       msg: "Le GOAT est enfin dans le jeu."
     },
     {
       key: "said",
       token: "said",
-      img: "/static/photos/said.jpg",
+      img: "/static/avatars/said.jpg",
       title: "🧠 Attention…",
       msg: "Le génie est là."
     },
     {
       key: "matthieu",
       token: "matthieu",
-      img: "/static/photos/matthieu.jpg",
+      img: "/static/avatars/matthieu.jpg",
       title: "👑 Mesdames & messieurs…",
       msg: "Le Big Boss est dans le jeu."
     },
     {
       key: "romain",
       token: "romain",
-      img: "/static/photos/romain.jpg",
+      img: "/static/avatars/romain.jpg",
       title: "🏭 Mesdames & messieurs…",
       msg: "Le responsable de production est dans le jeu."
     },
     {
       key: "cathy",
       token: "cathy",
-      img: "/static/photos/cathy.jpg",
+      img: "/static/avatars/cathy.jpg",
       title: "✨ Ça va être propre…",
       msg: "Cathy, la plus adorable du game, est là."
     },
     {
       key: "khalil",
       token: "khalil",
-      img: "/static/photos/khalil.jpg",
+      img: "/static/avatars/khalil.jpg",
       title: "✈️ Mesdames & messieurs…",
       msg: "Khalil est venu de Tunisie juste pour jouer avec nous."
     }
